Detail component working without styles, ToHome component created but still in progress. Files pokemon from backend, Reducer, Action, App were modified to display the new information correctly

--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -1,18 +1,18 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-}
+} */
 
-.left img {
+/* .left img {
   display: block;
   padding-top: 10px;
   padding-left: 10px;
   width: 90px;
   height: 90px;
-}
+} */
 
-.rigth {
+/* .rigth {
   display: flex;
   padding-left: 20%;
-}
+} */
