Working on the style modules

--- a/client/src/Components/ToHome/toHome.css
+++ b/client/src/Components/ToHome/toHome.css
@@ -1,13 +1,15 @@
 .containerToHome {
-  position: flex;
+  /* position: flex; */
 }
-
-.pokego {
+.navbar {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+}
+.pokego {
+  /* display: flex;
+  justify-content: flex-start; */
 
-  padding-top: 10px;
-  padding-left: 10px;
-  width: 90px;
-  height: 90px;
+  width: 40px;
+  height: 40px;
 }
