--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -3,5 +3,5 @@
 
   background-image: url("../MyImages/4119224.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
 }
