--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,3 +1,20 @@
+.containerNavbar {
+    height: 10vh;
+    background: none;
+}
+
 .navbar {
-    background: black;
+    /* background: black; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.toHomeNav {
+
+}
+
+#pokepedia {
+    width: 20vw;
+    height: auto;
 }
