--- a/client/src/Components/ToHome/toHome.css
+++ b/client/src/Components/ToHome/toHome.css
@@ -1,15 +1,26 @@
 .containerToHome {
-  /* position: flex; */
+  
 }
-.navbar {
+
+#homeButton {
+  
+}
+
+.homeReset {
+  width: 10vw;
+  height: auto;
+}
+
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+} */
 .pokego {
-  /* display: flex;
-  justify-content: flex-start; */
+  width: 10vw;
+  height: auto;
+}
 
-  width: 40px;
-  height: 40px;
+.homeSpan {
+  color: rgb(146, 12, 12);
 }
