--- a/client/src/Components/AddPokemon/addPokemon.css
+++ b/client/src/Components/AddPokemon/addPokemon.css
@@ -1,3 +1,13 @@
+#form {
+    background: red;
+    width: 95vw;
+    margin: 2vh 1vw 2vh 1vw;
+  box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+-webkit-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+-moz-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+color:blanchedalmond;
+}
+
 .inputsContainer{
     display: flex;
     text-transform: capitalize;
@@ -8,15 +18,21 @@
     border-radius: 5px;
     margin: 10px 20px;
     width: 50%;
+    display: inline-grid;
+    justify-content: flex-start;
 }
 
-.containerRight {
-    width: 50%;
+input[type=range] {
+    -webkit-appearance: none;
+    width: 100%;
+    background: transparent;
 }
 
-.containerRight img {
-    max-width: 50%;
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
 }
+
+
 
 .typesBoxs {
     display: flex;
@@ -45,4 +61,12 @@
     height: 25px;
     text-align: center;
     
+}
+
+.containerRight {
+    width: 50%;
+}
+
+.containerRight img {
+    max-width: 50%;
 }
