--- a/client/src/Components/Landing/landing.css
+++ b/client/src/Components/Landing/landing.css
@@ -4,7 +4,14 @@
 }
 
 .landing img {
-  width: 100vw;
-  height: auto;
-  size: 100%;
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+  width: 96vw;
+  justify-content: space-evenly;
+  margin: 2vh 1vw 2vh 1vw;
+  box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+-webkit-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+ -moz-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
 }
+
