--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,5 +1,5 @@
 .containerNavbar {
-    height: 10vh;
+    height: 12vh;
     background: none;
 }
 
@@ -15,6 +15,6 @@
 }
 
 #pokepedia {
-    width: 20vw;
-    height: auto;
+    width: auto;
+    height: 10vh;
 }
