--- a/client/src/Components/Pokemons/pokemons.css
+++ b/client/src/Components/Pokemons/pokemons.css
@@ -70,6 +70,10 @@ a:link:hover, a:visited:hover, a:active:hover {
 -moz-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
 }
 
+#top {
+  display: inline-flex;
+}
+
 .mapTypes {
   display: flex;
   flex-wrap: wrap;
