--- a/client/src/Components/Create/create.css
+++ b/client/src/Components/Create/create.css
@@ -3,6 +3,11 @@
 }
 
 #create {
-    width: 15vw;
-    height: auto;
+    height: 7vh;
 }
+
+#create:hover {
+    box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98); 
+  }
