--- a/client/src/Components/Landing/landing.css
+++ b/client/src/Components/Landing/landing.css
@@ -8,6 +8,7 @@
   text-align: center;
   flex-wrap: wrap;
   width: 96vw;
+  height: 82vh;
   justify-content: space-evenly;
   margin: 2vh 1vw 2vh 1vw;
   box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
