--- a/client/src/Components/Pokemons/pokemons.css
+++ b/client/src/Components/Pokemons/pokemons.css
@@ -7,39 +7,42 @@
   display: flex;
   text-align: center;
   flex-wrap: wrap;
-  width: 95vw;
+  width: 96.5vw;
   justify-content: space-evenly;
   margin: 2vh 1vw 2vh 1vw;
-  box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
--webkit-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
--moz-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+  box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
 }
 
-a:link, a:visited, a:active {
+a:link,
+a:visited,
+a:active {
   text-decoration: none;
   color: rgb(255, 255, 255);
   letter-spacing: 1px;
 }
 
-a:link:hover, a:visited:hover, a:active:hover {
+a:link:hover,
+a:visited:hover,
+a:active:hover {
   text-decoration: none;
   color: red;
-  
 }
 
 .pokemon {
   text-transform: capitalize;
   display: flexbox;
   margin: 2vh 1vw 2vh 1vw;
-  box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
-  -webkit-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
-  -moz-box-shadow: 0px 0px 10px 1px rgba(255,255,255,0.98);
+  box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
 }
 
 .pokemon:hover {
-  box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
-  -webkit-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
-  -moz-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
+  box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
 }
 
 .pokemonImage {
@@ -65,9 +68,9 @@ a:link:hover, a:visited:hover, a:active:hover {
   width: 20vw;
   height: auto;
   border-radius: 50%;
-  box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
--webkit-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
--moz-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98);
+  box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(156, 0, 0, 0.98);
 }
 
 #top {
