--- a/client/src/Components/ToHome/toHome.css
+++ b/client/src/Components/ToHome/toHome.css
@@ -1,21 +1,19 @@
 .containerToHome {
-  
 }
 
 .homeButton {
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 
 .homeButton a {
   height: 100%;
   display: flex;
-align-items: center;
+  justify-content: flex-start;
+  align-items: center;
 }
+
 .homeReset {
-  height: 7vh; 
+  /* height: 7vh; */
+  width: 15vw;
 }
 
 .homeReset:hover {
@@ -34,14 +32,9 @@ align-items: center;
 -moz-box-shadow: 0px 0px 10px 1px rgba(156,0,0,0.98); 
 }
 
-/* .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
 .pokego {
   height: 11vh;
-  }
+}
 
 .homeSpan {
   color: rgb(146, 12, 12);
