--- a/client/src/Components/AddPokemon/addPokemon.css
+++ b/client/src/Components/AddPokemon/addPokemon.css
@@ -72,9 +72,12 @@
 }
 
 input[type="range"] {
-  -webkit-appearance: none;
+  /* -webkit-appearance: none; */
   width: 20vw;
   background: grey;
+  box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.98);
 }
 
 input[type="range"]:hover {
