--- a/client/src/Components/Pokemons/pokemons.css
+++ b/client/src/Components/Pokemons/pokemons.css
@@ -77,6 +77,10 @@ a:active:hover {
   display: inline-flex;
 }
 
+.wait {
+  color: antiquewhite;
+}
+
 .mapTypes {
   display: flex;
   flex-wrap: wrap;
